<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/XMLStyleLinearLayout"
    android:background="@drawable/background_img">

    <!-- 登录页面（后台用户验证） -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/hpprog_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/login_userinfo"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/login_username"/>

                <EditText
                    android:id="@+id/login_usenameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="45dp"
                    android:background="#40FFFFFF"
                    android:gravity="center_vertical"
                    android:hint="@string/login_name_hint"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/login_textColor"
                    android:textColorHint="@color/login_textColor"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:lines="1"/>

                <Button
                    android:id="@+id/login_deleteBtn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/login_delete"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/login_password"/>

                <EditText
                    android:id="@+id/login_pswEdit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="45dp"
                    android:layout_gravity="center"
                    android:background="#40FFFFFF"
                    android:hint="@string/login_psw_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/login_textColor"
                    android:textColorHint="@color/login_textColor"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/login_deletePSWBtn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/login_delete"
                    android:visibility="gone" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <RadioButton
                    android:id="@+id/bluetooth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_type_bluetooth"
                    android:textColor="@color/login_textColor"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/serial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_type_serial"
                    android:textColor="@color/login_textColor"
                    android:textSize="16dp" />
            </RadioGroup>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingRight="45dp">

            <TextView
                android:id="@+id/login_saveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/login_saveImg"
                android:text="@string/login_save_psw"
                android:textColor="@color/login_textColor" />

            <ImageView
                android:id="@+id/login_saveImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_save_psw" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/login_entryBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/item_mybtn"
                android:text="@string/login_entry"
                android:textSize="18dp"
                android:textColor="@color/mybtn_selector"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/login_callBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:text="@string/login_customer_phone"
                    android:textColor="@color/login_textColor"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/login_company_name"
                    android:textColor="@color/login_textColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/login_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="V0.0"
                    android:textColor="@color/login_textColor"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
